[package]
name = "frib_datasource"
version = "0.1.4"
edition = "2024"
description = "Data sources for FRIB ringitem data"
license = "LGPL-3.0-or-later"
repository = "https://github.com/FRIBDAQ/rust_frib_datasource.git"
homepage = "http://docs.nscl.msu.edu/daq"


[dependencies]
nscldaq_ringbuffer = "0.8.8"
portman_client     = "0.2.0"
ringmaster_client  = "0.1.1"
rust_ringitem_format = "0.1.2"
url                 = "2.5.8"